抽取通用代码